# rfm9x-rs

./: .gitignore  Cargo.toml  README.md  dependencies.sh  generate.sh
registers/: Cargo.toml
registers/src/: lib.rs  lora.rs
registers/src/lora/: fifo.rs  fifo_add_ptr.rs  fifo_rx_base_addr.rs  fifo_rx_byte_addr_ptr.rs  fifo_rx_current_addr.rs  fifo_tx_base_addr.rs  freq_hop_period.rs  hop_channel.rs  irq_flags.rs  irq_flags_mask.rs  lna.rs  max_payload_length.rs  modem_config_1.rs  modem_config_2.rs  modem_config_3.rs  modem_stat.rs  ocp.rs  opmode.rs  pa.rs  pa_ramp.rs  packet_rssi.rs  packet_snr.rs  payload_length.rs  preamble_length_lsb.rs  preamble_length_msb.rs  rf_freq_lsb.rs  rf_freq_mid.rs  rf_freq_msb.rs  rssi.rs  rx_header_count_value_lsb.rs  rx_header_count_value_msb.rs  rx_nb_bytes.rs  rx_packet_count_value_lsb.rs  rx_packet_count_value_msb.rs  rx_symb_timeout_lsb.rs
svd/: rfm9x.svd
